# The-unexpected-stats-viewer

./: .gitignore  README.md  index.html  requirements.txt
bot/: .env.example  bot.py  core.py
bot/cogs/: bedwars.py  hypixel.py  quent.py  skywars.py
stats-bot/: .env.example  .gitignore  Cargo.toml
stats-bot/crates/hypixel/: Cargo.toml
stats-bot/crates/hypixel/src/: guild.rs  lib.rs
stats-bot/crates/hypixel/src/parsing/: bedwars.rs  mod.rs  player.rs  skywars.rs
stats-bot/crates/render/: Cargo.toml
stats-bot/crates/render/src/: lib.rs
stats-bot/crates/render/src/canvas/: canvas.rs  color.rs  context.rs  mod.rs  shape.rs  text.rs
stats-bot/crates/render/src/canvas/shapes/: accent_box.rs  column.rs  image.rs  mod.rs  rect.rs  row.rs  spacer.rs  text.rs  text_box.rs
stats-bot/crates/render/src/cards/: common.rs  mod.rs
stats-bot/crates/render/src/skin/: mod.rs  output.rs  skin.rs
stats-bot/crates/render/src/skin/model/: mod.rs  parts.rs  pose.rs  uv.rs
stats-bot/crates/render/src/skin/render/: camera.rs  context.rs  mod.rs  pipeline.rs  scene.rs  shader.wgsl
stats-bot/crates/stats-bot/: Cargo.toml
stats-bot/crates/stats-bot/src/: api.rs  framework.rs  main.rs
stats-bot/crates/stats-bot/src/commands/: mod.rs
stats-bot/crates/stats-bot/src/commands/stats/: mod.rs
stats-bot/crates/stats-bot/src/commands/stats/bedwars/: mod.rs
stats-bot/crates/stats-bot/src/commands/stats/bedwars/cards/: mod.rs  overall.rs  prestiges.rs
stats-bot/crates/stats-bot/src/commands/stats/hypixel/: mod.rs
stats-bot/crates/stats-bot/src/commands/stats/link/: mod.rs  unlink.rs
stats-bot/crates/stats-bot/src/commands/stats/quent/: mod.rs
stats-bot/crates/stats-bot/src/commands/stats/skywars/: mod.rs
stats-bot/crates/stats-bot/src/commands/stats/skywars/cards/: mod.rs  overall.rs
stats-bot/crates/stats-bot/src/commands/stats/sync/: mod.rs
