[workspace]
resolver = "2"
members = [
    "crates/hypixel",
    "crates/render",
    "crates/stats-bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["probablyfoui-dot"]
license = "Nones"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Discord
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "d58eb74f3b88ab8876f5506fe973934ab1f10bf6", features = ["gateway", "model", "cache", "framework", "builder", "http", "unstable"] }

# Image rendering
image = "0.25"
mctext = "1.3.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
rand = "0.8"

# Internal crates
hypixel = { path = "crates/hypixel" }
render = { path = "crates/render" }

[profile.dev.package.image]
opt-level = 3
[profile.dev.package.mctext]
opt-level = 3
[profile.dev.package.fontdue]
opt-level = 3
[profile.dev.package.render]
opt-level = 3
