[package]
name = "stats-bot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stats-bot"
path = "src/main.rs"

[dependencies]
hypixel = { path = "../hypixel" }
render = { path = "../render" }

serenity.workspace = true
image.workspace = true
mctext.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest = { workspace = true }
rand.workspace = true
chrono.workspace = true
